# heavyrain-data-retrieval-notebooks

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: loader.py  schemas.py
notebooks/: gauges_data_example.ipynb  iot_data_examples.ipynb  radar_data_example.ipynb  satellite_data_example.ipynb
utils/: iot_client.py  radar_client.py  sat_client.py
