[project]
name = "heavyrain-data-retrieval-notebooks"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "ipython>=9.7.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.7",
    "notebook>=7.4.7",
    "pandas>=2.3.3",
    "requests>=2.32.5",
]
